# image_loc

./: README.md
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
logs/distance/: build.make.000.log.stderr  build.make.002.log.stderr  build.make.011.log.stderr  build.make.014.log.stderr  build.make.018.log.stderr  build.make.023.log.stderr  build.make.024.log.stderr  build.make.025.log.stderr  build.make.026.log.stderr  build.make.030.log.stderr  build.make.031.log.stderr  build.make.034.log.stderr  build.make.036.log.stderr  build.make.037.log.stderr  build.make.038.log.stderr  build.make.039.log.stderr  build.make.041.log.stderr  build.make.043.log.stderr  build.make.044.log.stderr  build.make.051.log.stderr  build.make.052.log.stderr  build.make.053.log.stderr  build.make.054.log.stderr  build.make.056.log.stderr  build.make.057.log.stderr  build.make.058.log.stderr  build.make.059.log.stderr  build.make.060.log.stderr  build.make.061.log.stderr  build.make.063.log.stderr  build.make.064.log.stderr  build.make.067.log.stderr  build.make.068.log.stderr  build.make.070.log.stderr  build.make.072.log.stderr  build.make.073.log.stderr  build.make.074.log.stderr  build.make.075.log.stderr  build.make.076.log.stderr  build.make.079.log.stderr  (+7 more)
src/distancia/: CMakeLists.txt
src/distancia/launch/: pointer.launch
src/distancia/src/: -home-abril-catkin_realsense-src-yolov5_ros-scripts-.txt  depth.cpp  depth_nomes_mapa.cpp  depth_v2.cpp  map.cpp  pointer.py  yolo_MultiObject_track.py
(+57 files in other folders)
